--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -614,7 +614,7 @@
         "colab": {}
       },
       "source": [
-        "# Write a function to predict rent price for any feature or value.\n",
+        "# Write a function to predict rent price for any feature or value, with coefficient.\n",
         "\n",
         "def rent_price(value, feature, dataframe):\n",
         "    DT = dataframe\n",
@@ -623,7 +623,10 @@
         "    model = LinearRegression()\n",
         "    model.fit(X_train, y_train)\n",
         "    answer = model.predict([[value]])[0]\n",
-        "    return f'${answer:,.0f} estimated price for an apartment with {value} {feature} in NYC.'"
+        "    coef = model.coef_[0]\n",
+        "    line1 = f'${answer:,.0f} estimated price for an apartment with {value} {feature} in NYC. '\n",
+        "    line2 = f'Each additional {feature} adds ${coef:,.0f}.'\n",
+        "    return line1 + line2"
       ],
       "execution_count": 0,
       "outputs": []
@@ -637,26 +640,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2a226cfb-4683-4e3f-d630-97f10ec6a129"
+        "outputId": "11bb09f2-f087-4dce-8391-bee87a8a12e4"
       },
       "source": [
         "# Run the function.\n",
         "\n",
         "rent_price(3, 'bedrooms', df)"
       ],
-      "execution_count": 185,
+      "execution_count": 193,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'$4,823 estimated price for an apartment with 3 bedrooms in NYC.'"
+              "'$4,823 estimated price for an apartment with 3 bedrooms in NYC. Each additional bedrooms adds $855.'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 185
+          "execution_count": 193
         }
       ]
     },
@@ -669,27 +672,37 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7f6a7433-00e8-4556-d031-6819114b67a8"
+        "outputId": "71e818c5-4480-47a9-f25e-95a9fc790347"
       },
       "source": [
         "# Run with different inputs.\n",
         "\n",
         "rent_price(2, 'bathrooms', df)"
       ],
-      "execution_count": 186,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'$5,625 estimated price for an apartment with 2 bathrooms in NYC.'"
+              "'$5,625 estimated price for an apartment with 2 bathrooms in NYC. Each additional bathrooms adds $2,569.'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 186
+          "execution_count": 194
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9YRbGOPUfObA",
+        "colab_type": "text"
+      },
+      "source": [
+        "The grammar is off, but it's close."
       ]
     }
   ]
