--- a/unit2_lesson_1_assignment.ipynb
+++ b/unit2_lesson_1_assignment.ipynb
@@ -1104,6 +1104,42 @@
       "metadata": {
         "id": "9K48tXddp4-6",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "ca2495c6-2782-4000-b537-61263152413d"
+      },
+      "source": [
+        "# define prediction function \n",
+        "\n",
+        "def predict(bathrooms, dogs_allowed):\n",
+        "  y_pred = model_2.predict([[bathrooms, dogs_allowed]])\n",
+        "  estimate = y_pred[0]\n",
+        "  coeff = model_2.coef_\n",
+        "  result = f'${estimate:,.0f} estimated rent for a {bathrooms} bathroom that allows dogs: {dogs_allowed} '\n",
+        "  explain = f'This linear Regression each additional bathroom in a building that allows dogs adds ${coeff[0]:.0f}'\n",
+        "  return result + '\\n' + explain\n",
+        "\n",
+        "print(predict(2, 1))  "
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "$5,716 estimated rent for a 2 bathroom that allows dogs: 1 \n",
+            "This linear Regression each additional bathroom in a building that allows dogs adds $2569\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S_OD18TvvDPm",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
