--- a/module1-regression-1/Assignment_U2_S1_M1_(Week_5,_Day_1)_Regression_1.ipynb
+++ b/module1-regression-1/Assignment_U2_S1_M1_(Week_5,_Day_1)_Regression_1.ipynb
@@ -76,7 +76,7 @@
         "> [✓] Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
         "\n",
         "## Stretch Goals\n",
-        "- [ ] Do linear regression with two or more features.\n",
+        "- [✓] Do linear regression with two or more features.\n",
         "- [ ] Read [The Discovery of Statistical Regression](https://priceonomics.com/the-discovery-of-statistical-regression/)\n",
         "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapter 2.1: What Is Statistical Learning?"
       ]
