--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -584,7 +584,10 @@
       },
       "source": [
         "def pred(test_val, input_model):\n",
-        "  return input_model.predict([[test_val]])"
+        "  if (type(test_val) == type([])):  #If the test_val is a list, for multi-feature testing\n",
+        "    return input_model.predict([test_val])\n",
+        "  else:                             #If test_val is not a list, for single feature testing\n",
+        "    return input_model.predict([[test_val]])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -622,6 +625,46 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "0q8rIlfsqoN6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "92772854-1be8-48d2-8e1b-2d6228d841e5"
+      },
+      "source": [
+        "model.coef_"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([853.25416753])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1IK0at8-qraL",
+        "colab_type": "text"
+      },
+      "source": [
+        "The coefficient in the model represents the amount of target units per 1 unit of the features. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "_1P3OXcUJT4T",
         "colab_type": "code",
         "colab": {}
@@ -645,7 +688,7 @@
         "colab": {}
       },
       "source": [
-        "new_mod = gen_regression('price', ['bedrooms'], df)"
+        "new_mod = gen_regression('price', ['bedrooms', 'bathrooms'], df) #Generate a model from two features, and the target being the price"
       ],
       "execution_count": 0,
       "outputs": []
@@ -659,24 +702,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8ac486eb-98e2-452f-ed2e-e7378265d474"
+        "outputId": "71b03e65-608b-4e70-d15e-f0a7741c4595"
       },
       "source": [
-        "pred(3, new_mod)"
+        "pred([3,3], new_mod) #For a 3 bedroom, 3 bathroom apartment, rent ~= 8k"
       ],
-      "execution_count": 27,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([4827.73665176])"
+              "array([7917.58758932])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 36
         }
       ]
     },
