Updated with slightly better model

--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -1360,7 +1360,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "5439568e-7023-4e9a-cdad-9e9525097b97",
+        "outputId": "9c731cee-706c-492d-b6ff-8e28ca9674b9",
         "id": "cXQzFIZAYBNX",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1410,7 +1410,7 @@
         "print('Test Mean Absolute Error: ', mae)\n",
         "print('Test R^2 Score: ', r2)"
       ],
-      "execution_count": 165,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "stream",
@@ -1427,17 +1427,87 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "ELbL3vE7bcuC",
-        "colab_type": "text"
+        "id": "Gi8ox2RCc0af",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        },
+        "outputId": "9ee9e8fa-cf71-4de9-c32b-f90329791f22"
       },
       "source": [
-        "Best model has test error of $674.39\n",
+        "model.coef_"
+      ],
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  1739.69445503,    484.68812752,    160.15408773,    431.84771881,\n",
+              "           53.21022227,     58.03832316,     43.31539143,   -132.01280827,\n",
+              "          479.41712725,   -419.20703462,     99.79531304,   -286.47927567,\n",
+              "           33.74641098,    110.28229979,   -143.59613189,    -90.51682667,\n",
+              "       -12537.54653064,    -38.85572697,   -235.52320862,   -115.29442176,\n",
+              "          187.74337092,   -175.04146408])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 171
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S0T-xW7Uc26X",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f6298c26-7bad-46f1-bec4-7cf6b7f0372a"
+      },
+      "source": [
+        "model.intercept_"
+      ],
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-926401.7725267145"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 172
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "outputId": "71f7db35-6363-4167-b003-6df5732aa316",
+        "id": "HHTWa96Pdwfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        }
+      },
+      "source": [
+        "# Arrange X feature matrices and y target vectors\n",
         "features = ['bathrooms', 'bedrooms', \n",
         "            'elevator', 'doorman', \n",
         "            'garden_patio', 'dishwasher',\n",
-        "            'cats_and_dogs_allowed',\n",
+        "            'cats_allowed', 'dogs_allowed',\n",
         "            'hardwood_floors', 'laundry_in_unit', \n",
         "            'interest_numerical', 'fitness_center',\n",
         "            'high_speed_internet', 'balcony',\n",
@@ -1445,7 +1515,127 @@
         "            'pre-war', 'longitude',\n",
         "            'outdoor_space', 'common_outdoor_space',\n",
         "            'laundry_in_building', 'wheelchair_access',\n",
-        "            'roof_deck']"
+        "            'roof_deck']\n",
+        "\n",
+        "target = 'price'\n",
+        "\n",
+        "X_train = train[features]\n",
+        "y_train = train[target]\n",
+        "X_test = test[features]\n",
+        "y_test = test[target]\n",
+        "\n",
+        "# Fit the model\n",
+        "model.fit(X_train, y_train)\n",
+        "y_pred = model.predict(X_train)\n",
+        "mse = mean_squared_error(y_train, y_pred)\n",
+        "rmse = np.sqrt(mse)\n",
+        "mae = mean_absolute_error(y_train, y_pred)\n",
+        "r2 = r2_score(y_train, y_pred)\n",
+        "print(f'Train Root Mean Squared Error: ', rmse)\n",
+        "print(f'Train Mean Absolute Error: ', mae)\n",
+        "print(f'Train R^2 Score: ', r2)\n",
+        "\n",
+        "# Apply the model to test data\n",
+        "y_pred = model.predict(X_test)\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "rmse = np.sqrt(mse)\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "print('Test Root Mean Squared Error: ', rmse)\n",
+        "print('Test Mean Absolute Error: ', mae)\n",
+        "print('Test R^2 Score: ', r2)"
+      ],
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train Root Mean Squared Error:  1067.2335943375613\n",
+            "Train Mean Absolute Error:  669.973495433531\n",
+            "Train R^2 Score:  0.6331796476696094\n",
+            "Test Root Mean Squared Error:  1052.5077789657562\n",
+            "Test Mean Absolute Error:  674.3499849057978\n",
+            "Test R^2 Score:  0.6435762405355652\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GvJJE2Qbkal3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        },
+        "outputId": "a2303cd5-29e7-4a0f-ee64-05c5edb06b16"
+      },
+      "source": [
+        "model.coef_"
+      ],
+      "execution_count": 176,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  1739.71794013,    484.66862709,    160.17812481,    431.85165697,\n",
+              "           53.0172226 ,     57.94594538,    -25.90808609,     67.10871801,\n",
+              "         -131.9325153 ,    479.18706467,   -419.22707977,    100.25385341,\n",
+              "         -286.68818281,     33.62555291,    110.4172837 ,   -143.94690637,\n",
+              "          -90.43342601, -12533.75296787,    -38.47836024,   -236.85451914,\n",
+              "         -113.80553072,    187.55629267,   -175.11074725])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 176
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7cfeV1pPkgw0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "05b7e04f-0efd-41a4-8c97-bef2f5260aea"
+      },
+      "source": [
+        "model.intercept_"
+      ],
+      "execution_count": 177,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-926119.5534201037"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 177
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ELbL3vE7bcuC",
+        "colab_type": "text"
+      },
+      "source": [
+        "Best model has test error of $674.35\n",
+        "\n",
+        "features = ['bathrooms', 'bedrooms', 'elevator', 'doorman', 'garden_patio', 'dishwasher', 'cats_allowed', 'dogs_allowed', 'hardwood_floors', 'laundry_in_unit', 'interest_numerical', 'fitness_center', 'high_speed_internet', 'balcony', 'exclusive', 'new_construction', 'pre-war', 'longitude', 'outdoor_space', 'common_outdoor_space', 'laundry_in_building', 'wheelchair_access', 'roof_deck']"
       ]
     }
   ]
