cleaned up some code and added comment

--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -990,8 +990,10 @@
       },
       "source": [
         "target = 'SALE_PRICE'\n",
-        "high_cardinality = ['ADDRESS', 'SALE_DATE', 'BUILDING_CLASS_CATEGORY']\n",
-        "remove_columns = ['EASE-MENT', 'APARTMENT_NUMBER', 'TAX_CLASS_AT_TIME_OF_SALE']\n",
+        "high_cardinality = ['ADDRESS', 'SALE_DATE']\n",
+        "remove_columns = ['EASE-MENT', 'APARTMENT_NUMBER', \n",
+        "                  'BUILDING_CLASS_CATEGORY', \n",
+        "                  'TAX_CLASS_AT_TIME_OF_SALE'] # Columns are primarily NaN values or zero variation\n",
         "features = train.columns.drop([target] + high_cardinality + remove_columns)\n",
         "\n",
         "X_train = train[features]\n",
