--- a/module1-regression-1/GJW_assignment_regression_classification_1.ipynb
+++ b/module1-regression-1/GJW_assignment_regression_classification_1.ipynb
@@ -886,7 +886,7 @@
         "colab": {}
       },
       "source": [
-        "y_test = [3579]"
+        "y_test = [3150]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -900,7 +900,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "89f31402-657d-4ce2-f4b4-606aa87811cc"
+        "outputId": "b01861d6-4f6b-41eb-c5c9-4d35b4d5ae7f"
       },
       "source": [
         "from sklearn.metrics import mean_absolute_error\n",
@@ -908,12 +908,12 @@
         "mae = mean_absolute_error(y_test, y_pred)\n",
         "print(f'Out models error: {mae}')"
       ],
-      "execution_count": 49,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Out models error: 2054.6533256842667\n"
+            "Out models error: 2483.6533256842667\n"
           ],
           "name": "stdout"
         }
@@ -928,32 +928,62 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7b7427ce-f9df-4413-b81f-9b969aaf510d"
+        "outputId": "0fd1cd04-a2e0-42dc-c51a-4d8aaa16dce8"
       },
       "source": [
         "def predict(num_baths):\n",
         "    y_pred = model.predict([[num_baths]])\n",
         "    estimate = y_pred[0]\n",
         "    coefficient = model.coef_[0]\n",
-        "    result = f'${estimate:,.0f} estimated price for apartment with {num_baths:,.0f} Bathrooms. '\n",
+        "    result = f'${estimate:,.0f} estimated price for apartment with {num_baths:,.0f} Bathroom/s. '\n",
         "    explanation = f'In this linear regression, each additional bathroom adds ${coefficient:,.0f}.'\n",
         "    return result + explanation\n",
         "\n",
         "predict(1)"
       ],
-      "execution_count": 51,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'$3,060 estimated price for apartment with 1 Bathrooms. In this linear regression, each additional bathroom adds $2,573.'"
+              "'$3,060 estimated price for apartment with 1 Bathroom/s. In this linear regression, each additional bathroom adds $2,573.'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "usbmQq25e6X-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f3acbee7-d30e-4e54-ee80-89da5df173bc"
+      },
+      "source": [
+        "predict(0)"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'$487 estimated price for apartment with 0 Bathroom/s. In this linear regression, each additional bathroom adds $2,573.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
         }
       ]
     },
