Update module 4 lesson notebook

--- a/module4-logistic-regression/LS_DS_214.ipynb
+++ b/module4-logistic-regression/LS_DS_214.ipynb
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In your Kaggle challenge, you'll begin with the majority class baseline. How quickly can you beat this baseline?"
+    "In your assignment, your Sprint Challenge, and your upcoming Kaggle challenge, you'll begin with the majority class baseline. How quickly can you beat this baseline?"
    ]
   },
   {
