Update module 3 assignment

--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "## Stretch Goals\n",
     "- [ ] Add your own stretch goal(s) !\n",
-    "- [ ] Instead of `Ridge`, try `LinearRegression`. Depending on how many features you select, your errors will probably blow up! 💥\n",
+    "- [X] Instead of `Ridge`, try `LinearRegression`. Depending on how many features you select, your errors will probably blow up! 💥\n",
     "- [ ] Instead of `Ridge`, try [`RidgeCV`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeCV.html).\n",
     "- [ ] Learn more about feature selection:\n",
     "    - [\"Permutation importance\"](https://www.kaggle.com/dansbecker/permutation-importance)\n",
@@ -8456,7 +8456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8532,49 +8532,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error"
+    "### Instead of `Ridge`, try `RidgeCV`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import RidgeCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1e-06 53797989169.896904\n",
-      "1e-05 53797986845.03989\n",
-      "0.0001 53797963428.168205\n",
-      "0.001 53797730012.59393\n",
-      "0.01 53795470200.05253\n",
-      "0.1 53778673163.90552\n",
-      "1.0 53755177362.69993\n",
-      "10.0 54088004363.391624\n",
-      "100.0 55303512129.30392\n",
-      "1000.0 56617287970.002655\n",
-      "10000.0 57554955250.90829\n",
-      "100000.0 57668688643.88111\n",
-      "1000000.0 57383343483.59357\n"
+      "Test Mean Absolute Error: $158,918\n"
      ]
     }
    ],
    "source": [
-    "alphas = []\n",
-    "mses = []\n",
+    "alphas = [100, 200]\n",
     "\n",
-    "for alpha in np.logspace(-6, 6, num=13):\n",
-    "    ridge_reg_split = Ridge(alpha=alpha).fit(X_train, y_train)\n",
-    "    mse = mean_squared_error(y_test, ridge_reg_split.predict(X_test))\n",
-    "    print(alpha, mse)\n",
-    "    alphas.append(alpha)\n",
-    "    mses.append(mse)"
+    "model = RidgeCV(alphas=alphas)\n",
+    "model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "print(f'Test Mean Absolute Error: ${mae:,.0f}')"
    ]
   },
   {
